--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <template id="tooltip-template">
-        <span> (?)</span>
+        <slot>Some default</slot><span> (?)</span>
     </template>
     <p><uc-tooltip text="Web Components is a set of standards.">Web Components</uc-tooltip> are awesome!</p>
-    <p><uc-tooltip>Here we go!</uc-tooltip></p>
+    <p><uc-tooltip></uc-tooltip></p>
 </body>
 </html>
