--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <script src="tooltip.js"></script>
 </head>
 <body>
-    <template id="tooltip-template">
-        <slot>Some default</slot><span> (?)</span>
-    </template>
     <p><uc-tooltip text="Web Components is a set of standards.">Web Components</uc-tooltip> are awesome!</p>
-    <p><uc-tooltip></uc-tooltip></p>
+    <uc-tooltip></uc-tooltip>
+    <div>This does not get the web component style!</div>
 </body>
 </html>
