--- a/modal/index.html
+++ b/modal/index.html
@@ -28,7 +28,10 @@
         const modal = document.querySelector('uc-modal');
 
         confirmButton.addEventListener('click', () => {
-            modal.setAttribute('opened', '');
+            // modal.setAttribute('opened', '');
+            if (!modal.isOpen) {
+                modal.open();
+            }
         });
     </script>
 </body>
